--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.0.17"
+    "@fontsource/mulish": "^4.5.14",
+    "@fontsource/philosopher": "^4.5.11",
+    "astro": "^2.0.17",
+    "astro-icon": "^0.8.0"
   }
 }
